--- a/force-app/main/default/layouts/Product2-Product Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/Product2-Product Layout.layout-meta.xml
@@ -136,7 +136,12 @@
         <fields>CreatedBy</fields>
         <relatedList>ReturnOrderLineItems</relatedList>
     </relatedLists>
-
+    <relatedLists>
+        <fields>Product2</fields>
+        <fields>Location</fields>
+        <fields>QuantityOnHand</fields>
+        <relatedList>ProductItems</relatedList>
+    </relatedLists>
     <relatedLists>
         <relatedList>RelatedStandardPriceList</relatedList>
     </relatedLists>
